--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,30 +1,47 @@
 ---
 ---
-
-@article{cheng2024epoc,
-  title={EPOC: A Novel Pulse Generation Framework Incorporating Advanced Synthesis Techniques for Quantum Circuits},
-  author={Cheng, Jinglei and Zhu, Yuchen and Zhou, Yidong and Ren, Hang and Song, Zhixin and Liang, Zhiding},
-  journal={arXiv preprint arXiv:2405.03804},
-  year={2024}
+@article{zhou2024quantum,
+  title={Quantum-machine-assisted Drug Discovery: Survey and Perspective},
+  author={Zhou, Yidong and Chen, Jintai and Li, Weikang and Cheng, Jinglei and Karemore, Gopal and Zitnik, Marinka and Chong, Frederic and Liu, Junyu and Fu, Tianfan and Liang, Zhiding},
+  journal={arXiv preprint arXiv:2408.13479},
+  year={2024},
+  pdf={https://arxiv.org/pdf/2408.13479},
+  preview={kan.png},
+  selected={true},
+  publisher={preprint},
 }
 
 @article{zhu2024coqa,
   title={Coqa: Blazing Fast Compiler Optimizations for QAOA},
   author={Zhu, Yuchen and Zhou, Yidong and Cheng, Jinglei and Jin, Yuwei and Li, Boxi and Niu, Siyuan and Liang, Zhiding},
   journal={arXiv preprint arXiv:2408.08365},
-  year={2024}
+  year={2024},
+  pdf={https://arxiv.org/pdf/2408.08365},
+  preview={kan.png},
+  selected={true},
+  publisher={preprint},
 }
 
-@article{zhou2024quantum,
-  title={Quantum-machine-assisted Drug Discovery: Survey and Perspective},
-  author={Zhou, Yidong and Chen, Jintai and Li, Weikang and Cheng, Jinglei and Karemore, Gopal and Zitnik, Marinka and Chong, Frederic and Liu, Junyu and Fu, Tianfan and Liang, Zhiding},
-  journal={arXiv preprint arXiv:2408.13479},
-  year={2024}
+
+@article{cheng2024epoc,
+  title={EPOC: A Novel Pulse Generation Framework Incorporating Advanced Synthesis Techniques for Quantum Circuits},
+  author={Cheng, Jinglei and Zhu, Yuchen and Zhou, Yidong and Ren, Hang and Song, Zhixin and Liang, Zhiding},
+  journal={arXiv preprint arXiv:2405.03804},
+  year={2024},
+  pdf={https://arxiv.org/pdf/2405.03804},
+  preview={kan.png},
+  selected={true},
+  publisher={preprint},
 }
+
 
 @article{liu2024comparison,
   title={A comparison on constrain encoding methods for quantum approximate optimization algorithm},
   author={Liu, Yiwen and Jiao, Qingyue and Zhou, Yidong and Liang, Zhiding and Shi, Yiyu and Wan, Ke and Guo, Shangjie},
   journal={arXiv preprint arXiv:2410.04030},
-  year={2024}
+  year={2024},
+  pdf={https://arxiv.org/pdf/2410.04030},
+  preview={kan.png},
+  selected={true},
+  publisher={preprint},
 }
