--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
   journal={arXiv preprint arXiv:2408.13479},
   year={2024},
   pdf={https://arxiv.org/pdf/2408.13479},
-  preview={kan.png},
+  preview={quantumdrug.png},
   selected={true},
   publisher={preprint},
 }
@@ -17,11 +17,10 @@
   journal={arXiv preprint arXiv:2408.08365},
   year={2024},
   pdf={https://arxiv.org/pdf/2408.08365},
-  preview={kan.png},
+  preview={coqa.png},
   selected={true},
   publisher={preprint},
 }
-
 
 @article{cheng2024epoc,
   title={EPOC: A Novel Pulse Generation Framework Incorporating Advanced Synthesis Techniques for Quantum Circuits},
@@ -29,11 +28,10 @@
   journal={arXiv preprint arXiv:2405.03804},
   year={2024},
   pdf={https://arxiv.org/pdf/2405.03804},
-  preview={kan.png},
+  preview={epoc.png},
   selected={true},
   publisher={preprint},
 }
-
 
 @article{liu2024comparison,
   title={A comparison on constrain encoding methods for quantum approximate optimization algorithm},
@@ -41,7 +39,7 @@
   journal={arXiv preprint arXiv:2410.04030},
   year={2024},
   pdf={https://arxiv.org/pdf/2410.04030},
-  preview={kan.png},
+  preview={qaoacompaison.png},
   selected={true},
   publisher={preprint},
 }
