--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,7 +39,7 @@
   journal={arXiv preprint arXiv:2410.04030},
   year={2024},
   pdf={https://arxiv.org/pdf/2410.04030},
-  preview={qaoacompaison.png},
+  preview={qaoacomparison.png},
   selected={true},
   publisher={preprint},
 }
